@@ -14,12 +14,12 @@
 """Test not found errors
 """
 
+import doctest
 import re
 import unittest
 
 from zope.testing import renormalizing
 from zope.app.publication.testing import PublicationLayer
-from zope.testing import doctest
 
 
 checker = renormalizing.RENormalizing([
